parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> IDENT REGIST expression
Rule 2     statement -> IDENT PLUSEQUAL expression
Rule 3     statement -> IDENT MINUSEQUAL expression
Rule 4     statement -> IDENT PP
Rule 5     statement -> IDENT MM
Rule 6     expression -> IDENT
Rule 7     statement -> TURN IDENT REGIST expression
Rule 8     statement -> TURN
Rule 9     statement -> TURNALL
Rule 10    expression -> TURN IDENT
Rule 11    expression -> expression PLUS expression
Rule 12    expression -> expression MINUS expression
Rule 13    expression -> expression TIMES expression
Rule 14    expression -> expression DIVIDE expression
Rule 15    statement -> expression DIVIDE 0
Rule 16    expression -> expression OPEQ expression
Rule 17    expression -> expression OPNE expression
Rule 18    expression -> expression OPLT expression
Rule 19    expression -> expression OPLE expression
Rule 20    expression -> expression OPGT expression
Rule 21    expression -> expression OPGE expression
Rule 22    expression -> expression OPEQ list
Rule 23    expression -> expression OPNE list
Rule 24    expression -> expression OPLT list
Rule 25    expression -> expression OPLE list
Rule 26    expression -> expression OPGT list
Rule 27    expression -> expression OPGE list
Rule 28    expression -> PLUS expression
Rule 29    expression -> MINUS expression
Rule 30    expression -> LPAREN expression RPAREN
Rule 31    list_element -> expression COMMA expression
Rule 32    list_element -> list_element COMMA expression
Rule 33    list_element -> list_element COMMA list_element
Rule 34    list -> LPAREN list_element RPAREN
Rule 35    expression -> expression QUESTION expression COLON expression
Rule 36    expression -> STRING
Rule 37    expression -> NUMBER
Rule 38    expression -> BOOL
Rule 39    expression -> PRE
Rule 40    statement -> CHOICEHEAD list
Rule 41    expression -> expression DICE expression
Rule 42    expression -> DICE expression
Rule 43    expression -> expression DICE
Rule 44    expression -> DICE
Rule 45    expression -> expression AT expression
Rule 46    expression -> expression DOLLAR expression
Rule 47    expression -> expression EXCLAMATION expression
Rule 48    expression -> expression UNDERLINE expression
Rule 49    expression -> expression DOLLAR PLUS expression
Rule 50    expression -> SWJ
Rule 51    expression -> SWJ DOLLAR expression
Rule 52    expression -> SWJ AT expression
Rule 53    expression -> SWP expression
Rule 54    expression -> SWP expression W
Rule 55    statement -> FATECHANGE
Rule 56    statement -> FATECHANGE expression
Rule 57    expression -> COC
Rule 58    expression -> COC expression
Rule 59    expression -> COC list
Rule 60    expression -> COC expression UNDERLINE list
Rule 61    expression -> LHZ
Rule 62    expression -> MK
Rule 63    statement -> expression

Terminals, with rules where they appear

0                    : 15
AT                   : 45 52
BOOL                 : 38
CHOICEHEAD           : 40
COC                  : 57 58 59 60
COLON                : 35
COMMA                : 31 32 33
DICE                 : 41 42 43 44
DIVIDE               : 14 15
DOLLAR               : 46 49 51
EXCLAMATION          : 47
FATECHANGE           : 55 56
IDENT                : 1 2 3 4 5 6 7 10
LHZ                  : 61
LPAREN               : 30 34
MINUS                : 12 29
MINUSEQUAL           : 3
MK                   : 62
MM                   : 5
NUMBER               : 37
OPEQ                 : 16 22
OPGE                 : 21 27
OPGT                 : 20 26
OPLE                 : 19 25
OPLT                 : 18 24
OPNE                 : 17 23
PLUS                 : 11 28 49
PLUSEQUAL            : 2
PP                   : 4
PRE                  : 39
QUESTION             : 35
REGIST               : 1 7
RPAREN               : 30 34
STRING               : 36
SWJ                  : 50 51 52
SWP                  : 53 54
TIMES                : 13
TURN                 : 7 8 10
TURNALL              : 9
UNDERLINE            : 48 60
W                    : 54
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 3 7 11 11 12 12 13 13 14 14 15 16 16 17 17 18 18 19 19 20 20 21 21 22 23 24 25 26 27 28 29 30 31 31 32 35 35 35 41 41 42 43 45 45 46 46 47 47 48 48 49 49 51 52 53 54 56 58 60 63
list                 : 22 23 24 25 26 27 40 59 60
list_element         : 32 33 33 34
statement            : 0

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . IDENT REGIST expression
    (2) statement -> . IDENT PLUSEQUAL expression
    (3) statement -> . IDENT MINUSEQUAL expression
    (4) statement -> . IDENT PP
    (5) statement -> . IDENT MM
    (7) statement -> . TURN IDENT REGIST expression
    (8) statement -> . TURN
    (9) statement -> . TURNALL
    (15) statement -> . expression DIVIDE 0
    (40) statement -> . CHOICEHEAD list
    (55) statement -> . FATECHANGE
    (56) statement -> . FATECHANGE expression
    (63) statement -> . expression
    (6) expression -> . IDENT
    (10) expression -> . TURN IDENT
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (16) expression -> . expression OPEQ expression
    (17) expression -> . expression OPNE expression
    (18) expression -> . expression OPLT expression
    (19) expression -> . expression OPLE expression
    (20) expression -> . expression OPGT expression
    (21) expression -> . expression OPGE expression
    (22) expression -> . expression OPEQ list
    (23) expression -> . expression OPNE list
    (24) expression -> . expression OPLT list
    (25) expression -> . expression OPLE list
    (26) expression -> . expression OPGT list
    (27) expression -> . expression OPGE list
    (28) expression -> . PLUS expression
    (29) expression -> . MINUS expression
    (30) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression QUESTION expression COLON expression
    (36) expression -> . STRING
    (37) expression -> . NUMBER
    (38) expression -> . BOOL
    (39) expression -> . PRE
    (41) expression -> . expression DICE expression
    (42) expression -> . DICE expression
    (43) expression -> . expression DICE
    (44) expression -> . DICE
    (45) expression -> . expression AT expression
    (46) expression -> . expression DOLLAR expression
    (47) expression -> . expression EXCLAMATION expression
    (48) expression -> . expression UNDERLINE expression
    (49) expression -> . expression DOLLAR PLUS expression
    (50) expression -> . SWJ
    (51) expression -> . SWJ DOLLAR expression
    (52) expression -> . SWJ AT expression
    (53) expression -> . SWP expression
    (54) expression -> . SWP expression W
    (57) expression -> . COC
    (58) expression -> . COC expression
    (59) expression -> . COC list
    (60) expression -> . COC expression UNDERLINE list
    (61) expression -> . LHZ
    (62) expression -> . MK

    IDENT           shift and go to state 2
    TURN            shift and go to state 4
    TURNALL         shift and go to state 5
    CHOICEHEAD      shift and go to state 6
    FATECHANGE      shift and go to state 7
    PLUS            shift and go to state 8
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    STRING          shift and go to state 11
    NUMBER          shift and go to state 12
    BOOL            shift and go to state 13
    PRE             shift and go to state 14
    DICE            shift and go to state 15
    SWJ             shift and go to state 16
    SWP             shift and go to state 17
    COC             shift and go to state 18
    LHZ             shift and go to state 19
    MK              shift and go to state 20

    statement                      shift and go to state 1
    expression                     shift and go to state 3

state 1

    (0) S' -> statement .



state 2

    (1) statement -> IDENT . REGIST expression
    (2) statement -> IDENT . PLUSEQUAL expression
    (3) statement -> IDENT . MINUSEQUAL expression
    (4) statement -> IDENT . PP
    (5) statement -> IDENT . MM
    (6) expression -> IDENT .

    REGIST          shift and go to state 21
    PLUSEQUAL       shift and go to state 22
    MINUSEQUAL      shift and go to state 23
    PP              shift and go to state 24
    MM              shift and go to state 25
    DIVIDE          reduce using rule 6 (expression -> IDENT .)
    PLUS            reduce using rule 6 (expression -> IDENT .)
    MINUS           reduce using rule 6 (expression -> IDENT .)
    TIMES           reduce using rule 6 (expression -> IDENT .)
    OPEQ            reduce using rule 6 (expression -> IDENT .)
    OPNE            reduce using rule 6 (expression -> IDENT .)
    OPLT            reduce using rule 6 (expression -> IDENT .)
    OPLE            reduce using rule 6 (expression -> IDENT .)
    OPGT            reduce using rule 6 (expression -> IDENT .)
    OPGE            reduce using rule 6 (expression -> IDENT .)
    QUESTION        reduce using rule 6 (expression -> IDENT .)
    DICE            reduce using rule 6 (expression -> IDENT .)
    AT              reduce using rule 6 (expression -> IDENT .)
    DOLLAR          reduce using rule 6 (expression -> IDENT .)
    EXCLAMATION     reduce using rule 6 (expression -> IDENT .)
    UNDERLINE       reduce using rule 6 (expression -> IDENT .)
    $end            reduce using rule 6 (expression -> IDENT .)


state 3

    (15) statement -> expression . DIVIDE 0
    (63) statement -> expression .
    (11) expression -> expression . PLUS expression
    (12) expression -> expression . MINUS expression
    (13) expression -> expression . TIMES expression
    (14) expression -> expression . DIVIDE expression
    (16) expression -> expression . OPEQ expression
    (17) expression -> expression . OPNE expression
    (18) expression -> expression . OPLT expression
    (19) expression -> expression . OPLE expression
    (20) expression -> expression . OPGT expression
    (21) expression -> expression . OPGE expression
    (22) expression -> expression . OPEQ list
    (23) expression -> expression . OPNE list
    (24) expression -> expression . OPLT list
    (25) expression -> expression . OPLE list
    (26) expression -> expression . OPGT list
    (27) expression -> expression . OPGE list
    (35) expression -> expression . QUESTION expression COLON expression
    (41) expression -> expression . DICE expression
    (43) expression -> expression . DICE
    (45) expression -> expression . AT expression
    (46) expression -> expression . DOLLAR expression
    (47) expression -> expression . EXCLAMATION expression
    (48) expression -> expression . UNDERLINE expression
    (49) expression -> expression . DOLLAR PLUS expression

    DIVIDE          shift and go to state 26
    $end            reduce using rule 63 (statement -> expression .)
    PLUS            shift and go to state 27
    MINUS           shift and go to state 28
    TIMES           shift and go to state 29
    OPEQ            shift and go to state 30
    OPNE            shift and go to state 31
    OPLT            shift and go to state 32
    OPLE            shift and go to state 33
    OPGT            shift and go to state 34
    OPGE            shift and go to state 35
    QUESTION        shift and go to state 36
    DICE            shift and go to state 37
    AT              shift and go to state 38
    DOLLAR          shift and go to state 39
    EXCLAMATION     shift and go to state 40
    UNDERLINE       shift and go to state 41


state 4

    (7) statement -> TURN . IDENT REGIST expression
    (8) statement -> TURN .
    (10) expression -> TURN . IDENT

    IDENT           shift and go to state 42
    $end            reduce using rule 8 (statement -> TURN .)


state 5

    (9) statement -> TURNALL .

    $end            reduce using rule 9 (statement -> TURNALL .)


state 6

    (40) statement -> CHOICEHEAD . list
    (34) list -> . LPAREN list_element RPAREN

    LPAREN          shift and go to state 44

    list                           shift and go to state 43

state 7

    (55) statement -> FATECHANGE .
    (56) statement -> FATECHANGE . expression
    (6) expression -> . IDENT
    (10) expression -> . TURN IDENT
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (16) expression -> . expression OPEQ expression
    (17) expression -> . expression OPNE expression
    (18) expression -> . expression OPLT expression
    (19) expression -> . expression OPLE expression
    (20) expression -> . expression OPGT expression
    (21) expression -> . expression OPGE expression
    (22) expression -> . expression OPEQ list
    (23) expression -> . expression OPNE list
    (24) expression -> . expression OPLT list
    (25) expression -> . expression OPLE list
    (26) expression -> . expression OPGT list
    (27) expression -> . expression OPGE list
    (28) expression -> . PLUS expression
    (29) expression -> . MINUS expression
    (30) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression QUESTION expression COLON expression
    (36) expression -> . STRING
    (37) expression -> . NUMBER
    (38) expression -> . BOOL
    (39) expression -> . PRE
    (41) expression -> . expression DICE expression
    (42) expression -> . DICE expression
    (43) expression -> . expression DICE
    (44) expression -> . DICE
    (45) expression -> . expression AT expression
    (46) expression -> . expression DOLLAR expression
    (47) expression -> . expression EXCLAMATION expression
    (48) expression -> . expression UNDERLINE expression
    (49) expression -> . expression DOLLAR PLUS expression
    (50) expression -> . SWJ
    (51) expression -> . SWJ DOLLAR expression
    (52) expression -> . SWJ AT expression
    (53) expression -> . SWP expression
    (54) expression -> . SWP expression W
    (57) expression -> . COC
    (58) expression -> . COC expression
    (59) expression -> . COC list
    (60) expression -> . COC expression UNDERLINE list
    (61) expression -> . LHZ
    (62) expression -> . MK

    $end            reduce using rule 55 (statement -> FATECHANGE .)
    IDENT           shift and go to state 46
    TURN            shift and go to state 47
    PLUS            shift and go to state 8
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    STRING          shift and go to state 11
    NUMBER          shift and go to state 12
    BOOL            shift and go to state 13
    PRE             shift and go to state 14
    DICE            shift and go to state 15
    SWJ             shift and go to state 16
    SWP             shift and go to state 17
    COC             shift and go to state 18
    LHZ             shift and go to state 19
    MK              shift and go to state 20

    expression                     shift and go to state 45

state 8

    (28) expression -> PLUS . expression
    (6) expression -> . IDENT
    (10) expression -> . TURN IDENT
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (16) expression -> . expression OPEQ expression
    (17) expression -> . expression OPNE expression
    (18) expression -> . expression OPLT expression
    (19) expression -> . expression OPLE expression
    (20) expression -> . expression OPGT expression
    (21) expression -> . expression OPGE expression
    (22) expression -> . expression OPEQ list
    (23) expression -> . expression OPNE list
    (24) expression -> . expression OPLT list
    (25) expression -> . expression OPLE list
    (26) expression -> . expression OPGT list
    (27) expression -> . expression OPGE list
    (28) expression -> . PLUS expression
    (29) expression -> . MINUS expression
    (30) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression QUESTION expression COLON expression
    (36) expression -> . STRING
    (37) expression -> . NUMBER
    (38) expression -> . BOOL
    (39) expression -> . PRE
    (41) expression -> . expression DICE expression
    (42) expression -> . DICE expression
    (43) expression -> . expression DICE
    (44) expression -> . DICE
    (45) expression -> . expression AT expression
    (46) expression -> . expression DOLLAR expression
    (47) expression -> . expression EXCLAMATION expression
    (48) expression -> . expression UNDERLINE expression
    (49) expression -> . expression DOLLAR PLUS expression
    (50) expression -> . SWJ
    (51) expression -> . SWJ DOLLAR expression
    (52) expression -> . SWJ AT expression
    (53) expression -> . SWP expression
    (54) expression -> . SWP expression W
    (57) expression -> . COC
    (58) expression -> . COC expression
    (59) expression -> . COC list
    (60) expression -> . COC expression UNDERLINE list
    (61) expression -> . LHZ
    (62) expression -> . MK

    IDENT           shift and go to state 46
    TURN            shift and go to state 47
    PLUS            shift and go to state 8
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    STRING          shift and go to state 11
    NUMBER          shift and go to state 12
    BOOL            shift and go to state 13
    PRE             shift and go to state 14
    DICE            shift and go to state 15
    SWJ             shift and go to state 16
    SWP             shift and go to state 17
    COC             shift and go to state 18
    LHZ             shift and go to state 19
    MK              shift and go to state 20

    expression                     shift and go to state 48

state 9

    (29) expression -> MINUS . expression
    (6) expression -> . IDENT
    (10) expression -> . TURN IDENT
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (16) expression -> . expression OPEQ expression
    (17) expression -> . expression OPNE expression
    (18) expression -> . expression OPLT expression
    (19) expression -> . expression OPLE expression
    (20) expression -> . expression OPGT expression
    (21) expression -> . expression OPGE expression
    (22) expression -> . expression OPEQ list
    (23) expression -> . expression OPNE list
    (24) expression -> . expression OPLT list
    (25) expression -> . expression OPLE list
    (26) expression -> . expression OPGT list
    (27) expression -> . expression OPGE list
    (28) expression -> . PLUS expression
    (29) expression -> . MINUS expression
    (30) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression QUESTION expression COLON expression
    (36) expression -> . STRING
    (37) expression -> . NUMBER
    (38) expression -> . BOOL
    (39) expression -> . PRE
    (41) expression -> . expression DICE expression
    (42) expression -> . DICE expression
    (43) expression -> . expression DICE
    (44) expression -> . DICE
    (45) expression -> . expression AT expression
    (46) expression -> . expression DOLLAR expression
    (47) expression -> . expression EXCLAMATION expression
    (48) expression -> . expression UNDERLINE expression
    (49) expression -> . expression DOLLAR PLUS expression
    (50) expression -> . SWJ
    (51) expression -> . SWJ DOLLAR expression
    (52) expression -> . SWJ AT expression
    (53) expression -> . SWP expression
    (54) expression -> . SWP expression W
    (57) expression -> . COC
    (58) expression -> . COC expression
    (59) expression -> . COC list
    (60) expression -> . COC expression UNDERLINE list
    (61) expression -> . LHZ
    (62) expression -> . MK

    IDENT           shift and go to state 46
    TURN            shift and go to state 47
    PLUS            shift and go to state 8
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    STRING          shift and go to state 11
    NUMBER          shift and go to state 12
    BOOL            shift and go to state 13
    PRE             shift and go to state 14
    DICE            shift and go to state 15
    SWJ             shift and go to state 16
    SWP             shift and go to state 17
    COC             shift and go to state 18
    LHZ             shift and go to state 19
    MK              shift and go to state 20

    expression                     shift and go to state 49

state 10

    (30) expression -> LPAREN . expression RPAREN
    (6) expression -> . IDENT
    (10) expression -> . TURN IDENT
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (16) expression -> . expression OPEQ expression
    (17) expression -> . expression OPNE expression
    (18) expression -> . expression OPLT expression
    (19) expression -> . expression OPLE expression
    (20) expression -> . expression OPGT expression
    (21) expression -> . expression OPGE expression
    (22) expression -> . expression OPEQ list
    (23) expression -> . expression OPNE list
    (24) expression -> . expression OPLT list
    (25) expression -> . expression OPLE list
    (26) expression -> . expression OPGT list
    (27) expression -> . expression OPGE list
    (28) expression -> . PLUS expression
    (29) expression -> . MINUS expression
    (30) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression QUESTION expression COLON expression
    (36) expression -> . STRING
    (37) expression -> . NUMBER
    (38) expression -> . BOOL
    (39) expression -> . PRE
    (41) expression -> . expression DICE expression
    (42) expression -> . DICE expression
    (43) expression -> . expression DICE
    (44) expression -> . DICE
    (45) expression -> . expression AT expression
    (46) expression -> . expression DOLLAR expression
    (47) expression -> . expression EXCLAMATION expression
    (48) expression -> . expression UNDERLINE expression
    (49) expression -> . expression DOLLAR PLUS expression
    (50) expression -> . SWJ
    (51) expression -> . SWJ DOLLAR expression
    (52) expression -> . SWJ AT expression
    (53) expression -> . SWP expression
    (54) expression -> . SWP expression W
    (57) expression -> . COC
    (58) expression -> . COC expression
    (59) expression -> . COC list
    (60) expression -> . COC expression UNDERLINE list
    (61) expression -> . LHZ
    (62) expression -> . MK

    IDENT           shift and go to state 46
    TURN            shift and go to state 47
    PLUS            shift and go to state 8
    MINUS           shift and go to state 9
    LPAREN          shift and go to state 10
    STRING          shift and go to state 11
    NUMBER          shift and go to state 12
    BOOL            shift and go to state 13
    PRE             shift and go to state 14
    DICE            shift and go to state 15
    SWJ             shift and go to state 16
    SWP             shift and go to state 17
    COC             shift and go to state 18
    LHZ             shift and go to state 19
    MK              shift and go to state 20

    expression                     shift and go to state 50

state 11

    (36) expression -> STRING .

    DIVIDE          reduce using rule 36 (expression -> STRING .)
    PLUS            reduce using rule 36 (expression -> STRING .)
    MINUS           reduce using rule 36 (expression -> STRING .)
    TIMES           reduce using rule 36 (expression -> STRING .)
    OPEQ            reduce using rule 36 (expression -> STRING .)
    OPNE            reduce using rule 36 (expression -> STRING .)
    OPLT            reduce using rule 36 (expression -> STRING .)
    OPLE            reduce using rule 36 (expression -> STRING .)
    OPGT            reduce using rule 36 (expression -> STRING .)
    OPGE            reduce using rule 36 (expression -> STRING .)
    QUESTION        reduce using rule 36 (expression -> STRING .)
    DICE            reduce using rule 36 (expression -> STRING .)
    AT              reduce using rule 36 (expression -> STRING .)
    DOLLAR          reduce using rule 36 (expression -> STRING .)
    EXCLAMATION     reduce using rule 36 (expression -> STRING .)
    UNDERLINE       reduce using rule 36 (expression -> STRING .)
    $end            reduce using rule 36 (expression -> STRING .)
    RPAREN          reduce using rule 36 (expression -> STRING .)
    W               reduce using rule 36 (expression -> STRING .)
    COLON           reduce using rule 36 (expression -> STRING .)
    COMMA           reduce using rule 36 (expression -> STRING .)


state 12

    (37) expression -> NUMBER .

    DIVIDE          reduce using rule 37 (expression -> NUMBER .)
    PLUS            reduce using rule 37 (expression -> NUMBER .)
    MINUS           reduce using rule 37 (expression -> NUMBER .)
    TIMES           reduce using rule 37 (expression -> NUMBER .)
    OPEQ            reduce using rule 37 (expression -> NUMBER .)
    OPNE            reduce using rule 37 (expression -> NUMBER .)
    OPLT            reduce using rule 37 (expression -> NUMBER .)
    OPLE            reduce using rule 37 (expression -> NUMBER .)
    OPGT            reduce using rule 37 (expression -> NUMBER .)
    OPGE            reduce using rule 37 (expression -> NUMBER .)
    QUESTION        reduce using rule 37 (expression -> NUMBER .)
    DICE            reduce using rule 37 (expression -> NUMBER .)
    AT              reduce using rule 37 (expression -> NUMBER .)
    DOLLAR          reduce using rule 37 (expression -> NUMBER .)
    EXCLAMATION     reduce using rule 37 (expression -> NUMBER .)
    UNDERLINE       reduce using rule 37 (expression -> NUMBER .)
    $end            reduce using rule 37 (expression -> NUMBER .)
    RPAREN          reduce using rule 37 (expression -> NUMBER .)
    W               reduce using rule 37 (expression -> NUMBER .)
    COLON           reduce using rule 37 (expression -> NUMBER .)
    COMMA           reduce using rule 37 (expression -> NUMBER .)


state 13

    (38) expression -> BOOL .

    DIVIDE          reduce using rule 38 (expression -> BOOL .)
    PLUS            reduce using rule 38 (expression -> BOOL .)
    MINUS           reduce using rule 38 (expression -> BOOL .)
    TIMES           reduce using rule 38 (expression -> BOOL .)
    OPEQ            reduce using rule 38 (expression -> BOOL .)
    OPNE            reduce using rule 38 (expression -> BOOL .)
    OPLT            reduce using rule 38 (expression -> BOOL .)
    OPLE            reduce using rule 38 (expression -> BOOL .)
    OPGT            reduce using rule 38 (expression -> BOOL .)
    OPGE            reduce using rule 38 (expression -> BOOL .)
    QUESTION        reduce using rule 38 (expression -> BOOL .)
    DICE            reduce using rule 38 (expression -> BOOL .)
    AT              reduce using rule 38 (expression -> BOOL .)
    DOLLAR          reduce using rule 38 (expression -> BOOL .)
    EXCLAMATION     reduce using rule 38 (expression -> BOOL .)
    UNDERLINE       reduce using rule 38 (expression -> BOOL .)
    $end            reduce using rule 38 (expression -> BOOL .)
    RPAREN          reduce using rule 38 (expression -> BOOL .)
    W               reduce using rule 38 (expression -> BOOL .)
    COLON           reduce using rule 38 (expression -> BOOL .)
    COMMA           reduce using rule 38 (expression -> BOOL .)


state 14

    (39) expression -> PRE .

    DIVIDE          reduce using rule 39 (expression -> PRE .)
    PLUS            reduce using rule 39 (expression -> PRE .)
    MINUS           reduce using rule 39 (expression -> PRE .)
    TIMES           reduce using rule 39 (expression -> PRE .)
    OPEQ            reduce using rule 39 (expression -> PRE .)
    OPNE            reduce using rule 39 (expression -> PRE .)
    OPLT            reduce using rule 39 (expression -> PRE .)
    OPLE            reduce using rule 39 (expression -> PRE .)
    OPGT            reduce using rule 39 (expression -> PRE .)
    OPGE            reduce using rule 39 (expression -> PRE .)
    QUESTION        reduce using rule 39 (expression -> PRE .)
    DICE            reduce using rule 39 (expression -> PRE .)
    AT              reduce using rule 39 (expression -> PRE .)
    DOLLAR          reduce using rule 39 (expression -> PRE .)
    EXCLAMATION     reduce using rule 39 (expression -> PRE .)
    UNDERLINE       reduce using rule 39 (expression -> PRE .)
    $end            reduce using rule 39 (expression -> PRE .)
    RPAREN          reduce using rule 39 (expression -> PRE .)
    W               reduce using rule 39 (expression -> PRE .)
    COLON           reduce using rule 39 (expression -> PRE .)
    COMMA           reduce using rule 39 (expression -> PRE .)


state 15

    (42) expression -> DICE . expression
    (44) expression -> DICE .
    (6) expression -> . IDENT
    (10) expression -> . TURN IDENT
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (16) expression -> . expression OPEQ expression
    (17) expression -> . expression OPNE expression
    (18) expression -> . expression OPLT expression
    (19) expression -> . expression OPLE expression
    (20) expression -> . expression OPGT expression
    (21) expression -> . expression OPGE expression
    (22) expression -> . expression OPEQ list
    (23) expression -> . expression OPNE list
    (24) expression -> . expression OPLT list
    (25) expression -> . expression OPLE list
    (26) expression -> . expression OPGT list
    (27) expression -> . expression OPGE list
    (28) expression -> . PLUS expression
    (29) expression -> . MINUS expression
    (30) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression QUESTION expression COLON expression
    (36) expression -> . STRING
    (37) expression -> . NUMBER
    (38) expression -> . BOOL
    (39) expression -> . PRE
    (41) expression -> . expression DICE expression
    (42) expression -> . DICE expression
    (43) expression -> . expression DICE
    (44) expression -> . DICE
    (45) expression -> . expression AT expression
    (46) expression -> . expression DOLLAR expression
    (47) expression -> . expression EXCLAMATION expression
    (48) expression -> . expression UNDERLINE expression
    (49) expression -> . expression DOLLAR PLUS expression
    (50) expression -> . SWJ
    (51) expression -> . SWJ DOLLAR expression
    (52) expression -> . SWJ AT expression
    (53) expression -> . SWP expression
    (54) expression -> . SWP expression W
    (57) expression -> . COC
    (58) expression -> . COC expression
    (59) expression -> . COC list
    (60) expression -> . COC expression UNDERLINE list
    (61) expression -> . LHZ
    (62) expression -> . MK

    DIVIDE          reduce using rule 44 (expression -> DICE .)
    PLUS            reduce using rule 44 (expression -> DICE .)
    MINUS           reduce using rule 44 (expression -> DICE .)
    TIMES           reduce using rule 44 (expression -> DICE .)
    OPEQ            reduce using rule 44 (expression -> DICE .)
    OPNE            reduce using rule 44 (expression -> DICE .)
    OPLT            reduce using rule 44 (expression -> DICE .)
    OPLE            reduce using rule 44 (expression -> DICE .)
    OPGT            reduce using rule 44 (expression -> DICE .)
    OPGE            reduce using rule 44 (expression -> DICE .)
    QUESTION        reduce using rule 44 (expression -> DICE .)
    DICE            reduce using rule 44 (expression -> DICE .)
    AT              reduce using rule 44 (expression -> DICE .)
    DOLLAR          reduce using rule 44 (expression -> DICE .)
    EXCLAMATION     reduce using rule 44 (expression -> DICE .)
    UNDERLINE       reduce using rule 44 (expression -> DICE .)
    $end            reduce using rule 44 (expression -> DICE .)
    RPAREN          reduce using rule 44 (expression -> DICE .)
    W               reduce using rule 44 (expression -> DICE .)
    COLON           reduce using rule 44 (expression -> DICE .)
    COMMA           reduce using rule 44 (expression -> DICE .)
    IDENT           shift and go to state 46
    TURN            shift and go to state 47
    LPAREN          shift and go to state 10
    STRING          shift and go to state 11
    NUMBER          shift and go to state 12
    BOOL            shift and go to state 13
    PRE             shift and go to state 14
    SWJ             shift and go to state 16
    SWP             shift and go to state 17
    COC             shift and go to state 18
    LHZ             shift and go to state 19
    MK              shift and go to state 20

  ! PLUS            [ shift and go to state 8 ]
  ! MINUS           [ shift and go to state 9 ]
  ! DICE            [ shift and go to state 15 ]

    expression                     shift and go to state 51

state 16

    (50) expression -> SWJ .
    (51) expression -> SWJ . DOLLAR expression
    (52) expression -> SWJ . AT expression

    DIVIDE          reduce using rule 50 (expression -> SWJ .)
    PLUS            reduce using rule 50 (expression -> SWJ .)
    MINUS           reduce using rule 50 (expression -> SWJ .)
    TIMES           reduce using rule 50 (expression -> SWJ .)
    OPEQ            reduce using rule 50 (expression -> SWJ .)
    OPNE            reduce using rule 50 (expression -> SWJ .)
    OPLT            reduce using rule 50 (expression -> SWJ .)
    OPLE            reduce using rule 50 (expression -> SWJ .)
    OPGT            reduce using rule 50 (expression -> SWJ .)
    OPGE            reduce using rule 50 (expression -> SWJ .)
    QUESTION        reduce using rule 50 (expression -> SWJ .)
    DICE            reduce using rule 50 (expression -> SWJ .)
    EXCLAMATION     reduce using rule 50 (expression -> SWJ .)
    UNDERLINE       reduce using rule 50 (expression -> SWJ .)
    $end            reduce using rule 50 (expression -> SWJ .)
    RPAREN          reduce using rule 50 (expression -> SWJ .)
    W               reduce using rule 50 (expression -> SWJ .)
    COLON           reduce using rule 50 (expression -> SWJ .)
    COMMA           reduce using rule 50 (expression -> SWJ .)
    DOLLAR          shift and go to state 52
    AT              shift and go to state 53

  ! AT              [ reduce using rule 50 (expression -> SWJ .) ]
  ! DOLLAR          [ reduce using rule 50 (expression -> SWJ .) ]


state 17

    (53) expression -> SWP . expression
    (54) expression -> SWP . expression W
    (6) expression -> . IDENT
    (10) expression -> . TURN IDENT
    (11) expression -> . expression PLUS expression
    (12) expression -> . expression MINUS expression
    (13) expression -> . expression TIMES expression
    (14) expression -> . expression DIVIDE expression
    (16) expression -> . expression OPEQ expression
    (17) expression -> . expression OPNE expression
    (18) expression -> . expression OPLT expression
    (19) expression -> . expression OPLE expression
    (20) expression -> . expression OPGT expression
    (21) expression -> . expression OPGE expression
    (22) expression -> . expression OPEQ list
    (23) expression -> . expression OPNE list
    (24) expression -> . expression OPLT list
    (25) expression -> . expression OPLE list
    (26) expression -> . expression OPGT list
    (27) expression -> . expression OPGE list
    (28) expression -> . PLUS expression
    (29) expression -> . MINUS expression
    (30) expression -> . LPAREN expression RPAREN
    (35) expression -> . expression QUESTION expression COLON expression
    (36) expression -> . STRING
    (37) expression -> . NUMBER
    (38) expression -> . BOOL
    (39) expression -> . PRE
    (41) expression -> . expression DICE expression
    (42) expression -> . DICE expression
    (43) expression -> . expression DICE
    (44) expression -> . DICE
    (45) expression -> . expression AT expression
    (46) expression -> . expression DOLLAR expression
    (47) expression -> . expression EXCLAMATION expression
    (48) expression -> . expression UNDERLINE expression
    (49) expression -> . expression DOLLAR PLUS expression
    (50) expression -> . SWJ
    (51) expression -> . SWJ DOLLAR expression
    (52) expression -> . SWJ AT expression
    (53) expression -> . SWP expression
    (54) expression -> . SWP expression W
    (57) expression -> . COC
    (58) expression -> . COC expression
    (59) expression -> . COC list
    (60) expression -> . COC expression UNDERLINE list
    (61) expression -> . LHZ
    (62) expression -> . MK
